force-app/main/default/objects/PricebookEntry/fields/BasePrice__c.field-meta.xml
<CustomField>
    <fullName>BasePrice__c</fullName>
    <description>The Price on the Base PriceList, factory, product and sales price are calculated from this</description>
    <inlineHelpText>The Price of Products and Services as Listed on the Product Catalog</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>