force-app/main/default/objects/PricebookEntry/fields/Manual__c.field-meta.xml
<CustomField>
    <fullName>Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Processing OLD</label>
    <type>Checkbox</type>
</CustomField>