force-app/main/default/objects/PricebookEntry/fields/MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxQuantity__c</fullName>
    <description>The Maximum Quantity of an Item on a Sales Order</description>
    <inlineHelpText>The Maximum Quantity of an Item on a Sales Order</inlineHelpText>
    <label>Quantity per Order</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>