force-app/main/default/objects/PricebookEntry/fields/Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum Price of an Item, used for Special Prices for example Color
If Total Sales Price is less than minimum Price then use Minimum Price</description>
    <inlineHelpText>Minimum Price of an Item, used for Special Prices for example Color</inlineHelpText>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>