force-app/main/default/objects/PricebookEntry/fields/Price_Weight__c.field-meta.xml
<CustomField>
    <fullName>Price_Weight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Weight OLD</label>
    <type>Checkbox</type>
</CustomField>