force-app/main/default/objects/PricebookEntry/fields/PriceWeight__c.field-meta.xml
<CustomField>
    <fullName>PriceWeight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Weight</label>
    <type>Checkbox</type>
</CustomField>