force-app/main/default/objects/PricebookEntry/fields/Product_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_Type__c</fullName>
    <formula>TEXT(Product2.Cost_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Cost Type</label>
    <type>Text</type>
</CustomField>