force-app/main/default/objects/PricebookEntry/fields/Product_Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Code__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sales Code OLD</label>
    <type>Text</type>
</CustomField>