force-app/main/default/objects/PricebookEntry/fields/Product_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Of_Measure__c</fullName>
    <description>UoM for a Product</description>
    <formula>TEXT(Product2.QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit Of Measure OLD</label>
    <type>Text</type>
</CustomField>