force-app/main/default/objects/PricebookEntry/fields/Quantity_per_Order__c.field-meta.xml
<CustomField>
    <fullName>Quantity_per_Order__c</fullName>
    <description>The Maximum Quantity of an Item on an Order</description>
    <inlineHelpText>The Maximum Quantity of an Item on an Order</inlineHelpText>
    <label>Quantity per Order OLD</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>