force-app/main/default/objects/PricebookEntry/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Transmission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>